--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<span class="subheading">Hello! I Am
-									<h1 style="font-size: 47px;">Achal Patil</h1>https://maps.google.com/
+									<h1 style="font-size: 47px;">Achal Patil</h1>
 									<p><a style="font-size: 25px;" href="./img.png" class="btn btn-primary"> Resume</a>
 										<a style="font-size: 24px;"
 											href="https://www.linkedin.com/in/achal-patil-532461257/"
@@ -167,7 +167,8 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								<span class="subheading">My Intro</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Me</h2>
-								<p>I'm a dedicated software developer with a passion for creating innovative digital
+								<p> I'M  full stack developer, <br>
+									I'm a dedicated software developer with a passion for creating innovative digital
 									solutions. With a strong foundation in programming and a knack for problem-solving,
 									I specialize in crafting robust software applications that drive efficiency and user
 									satisfaction.</p>
@@ -539,7 +540,7 @@
 						<h2>Have a project on your mind.</h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
 							It is a paradisematic country, in which roasted parts of sentences fly.</p>
-						<p class="mb-0"><a href="#" class="btn btn-white py-3 px-4">Contact me</a></p>
+						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
@@ -619,17 +620,17 @@
 
 
 
-				<!-- <div class="col-md-3">
+				<div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-7.jpg);">
+						style="background-image: url(https://play-lh.googleusercontent.com/oRfGPvu132cuyKZXG9Z-OoWr-OlN7VFBIw60vvkBQ2Gzv4V4VdtvpwEISJ1rv9ZzTVI);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							
+							<span>Mobile Developer</span>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<!-- <div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/work-8.jpg);">
 						<div class="overlay"></div>
@@ -638,7 +639,26 @@
 							<span>Web Design</span>
 						</div>
 					</div>
-				</div> -->
+				</div>  -->
+			</div>
+		</div>
+	</section>
+	<section class="ftco-hireme">
+		<div class="container">
+			<div class="row justify-content-between">
+				<div class="col-md-8 col-lg-8 d-flex align-items-center">
+					<div class="w-100 py-4">
+						<h2> “Plans are of little importance, but planning is essential.” </h2>
+					 <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
+							It is a paradisematic country, in which roasted parts of sentences fly.</p> -->
+							<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Join us</a></p>
+					
+					</div>
+				</div>
+				<div class="col-md-4 col-lg-4 d-flex align-items-end">
+					<img src="https://media.licdn.com/dms/image/v2/D5612AQHfD9ATxQaJhA/article-cover_image-shrink_600_2000/article-cover_image-shrink_600_2000/0/1695766302304?e=2147483647&v=beta&t=PdZBrV2n_NmdHZnXzV-BgfeyKGsOzfSu0I8YzNxsSu8"
+						class="img-fluid" alt="">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -656,7 +676,8 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href=".hh" class="block-20" style="background-image: url('https://pbs.twimg.com/profile_images/1829166084626210816/c6sR7XYC_400x400.png');">
+						<a href=".hh" class="block-20"
+							style="background-image: url('https://pbs.twimg.com/profile_images/1829166084626210816/c6sR7XYC_400x400.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -664,8 +685,9 @@
 									<span class="mr-2">1.5 year0</span>
 								<h3 class="heading"><a href="http://enjoyprograming.com/">Enjoy Programming</a>
 								</h3>
-							<br>
-								<a href="http://enjoyprograming.com/" class="meta-chat"><span class="icon-chat">click me</span> </a>
+								<br>
+								<a href="http://enjoyprograming.com/" class="meta-chat"><span class="icon-chat">click
+										me</span> </a>
 								</p>
 							</div>
 
@@ -676,17 +698,20 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href=".hh" class="block-20" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeAUgUUNwwqEP7VC9fkDCqfLCvdTG1p6bQcg&s');">
+						<a href=".hh" class="block-20"
+							style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSeAUgUUNwwqEP7VC9fkDCqfLCvdTG1p6bQcg&s');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
 								<p class="mb-0">
 									<span class="mr-2">3 year</span>
-								<h3 class="heading"><a href="https://www.sbjit.edu.in/">S. B. Jain Institute of Technology</a>
+								<h3 class="heading"><a href="https://www.sbjit.edu.in/">S. B. Jain Institute of
+										Technology</a>
 								</h3>
-							<br>
-							<br><br><br>
-								<a href="https://www.sbjit.edu.in/" class="meta-chat"><span class="icon-chat">click me</span> </a>
+								<br>
+								<br><br><br>
+								<a href="https://www.sbjit.edu.in/" class="meta-chat"><span class="icon-chat">click
+										me</span> </a>
 								</p>
 							</div>
 
@@ -780,7 +805,7 @@
 											style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9cQIFjYxS2DIjTAd655ULaIerBUe5a0hOtA&s)">
 										</div>
 										<div class="pl-3">
-											<p class="name">1th year- 3th year</p>
+											<p class="name">1st year- 3rd year</p>
 											<!-- <span class="position">Marketing Manager</span> -->
 										</div>
 									</div>
@@ -923,10 +948,10 @@
 							<ul>
 								<li><span class="icon fa fa-map marker"></span><span class="text">
 										rathi layout katol</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+919130205662
+										</span></a></li>
 								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span
-											class="text">@yourdomain.com</span></a></li>
+											class="text">Achal-Portfoilo</span></a></li>
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
