--- a/project/reactjs.html
+++ b/project/reactjs.html
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3">
+				<!-- <div class="col-md-3">
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(https://www.cnet.com/a/img/resize/b9b09bd80b3129a6a5da79d9bd17487b977c9677/hub/2014/10/27/40194e6e-2544-419e-a340-f7c17b2e83c5/html5-wow-image-w3c.jpg?auto=webp&width=768);">
 						<div class="overlay"></div>
@@ -83,7 +83,7 @@
 							<span>Live Project</span>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 
 				<!-- <div class="col-md-3">
